2003-04-22  Bernhard Held <bernhard@bernhardheld.de>

	* Makefile.common.in: added @EXEEXT@
	* configure.in: removed all mingw32 stuff
	* configure: rebuilt from configure.in
	* doc/sdccman.lyx: updated section "installation"
	* support/scripts/sdcc_mingw32: adapted to configure
	* support/scripts/sdcc_cygwin_mingw32: added

2003-04-22  Scott Dattalo  <scott@dattalo.com>

	* src/pic Added object file support for the PIC port
	* src/pic Applied patch from Craig Franklin (this started the object file support)
	* src/regression Updated the PIC regression tests for object files

2003-04-20  Borut Razem <borut.razem@siol.net>

	* sdcc/as/mcs51/lklex.c: make getfid() more robust and fixed gcc warning:
	  lklex.c: In function `getfid':
	  lklex.c:203: warning: array subscript has type `char'
	* src/SDCCglobl.h: small change in stack handling macros, to avoid crash when compiled
	  with MSVC with global optimization enabled (probably an cl compiler bug ;-)
	* support/Util/SDCCerr.c, support/Util/SDCCerr.h: added function fatal(), called from
	  stack handling macros

2003-04-19  Borut Razem <borut.razem@siol.net>

	* "handling space characters in file path" task:
	* src/SDCCmacro.c: fixed bug in handlig quote at the end of line
	* support/Util/BuildCmd.c: define par as NULL if parameter value is invalid
	* support/Util/MySystem.h: make it self-sufficient
	* src/avr/main.c, src/ds390/main.c, src/mcs51/main.c, src/pic/main.c, src/xa51/main.c,
	  src/z80/main.c, sdcc/as/mcs51/lklex.c:
	  handling space characters in file path
	* src/SDCCmain.c: introduced setDataPaths() function, {datadir} macro
	  (it will be used by assemblers, which have their own includes, e.g. gpasm)
	* support/Util/MySystem.c: handling space characters in executable's path

2003-04-19  Bernhard Held <bernhard@bernhardheld.de>

	* as/z80/Makefile: fix permanent rebuild of z80
	* sim/ucsim/gui.src/Makefile.in: target "install" builds the same packages as target "all"