@@ -1,3 +1,9 @@
+2003-04-23  Bernhard Held <bernhard@bernhardheld.de>
+
+	* as/Makefile: fix target clean
+	* as/clean.mk: fix target clean
+	* as/z80/clean.mk: fix target clean
+
 2003-04-22  Bernhard Held <bernhard@bernhardheld.de>
 
 	* Makefile.common.in: added @EXEEXT@
